mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Jun 20 2010] - Rumble
  Fixed two memory leaks. (thanks Dio)
[Jum 19 2010] - Fizban
  Changed Helpcheck from level 34 to level 32.
[Jun 07 2010] - Fizban
  Enabled nohassled immortals to give cursed items to other players.
[Jun 18 2010] - Rumble
  Fixed unaffect clearing ch affects and not vict. (thanks Drefs)
[May 24 2010] - Rumble
  Fixed bug in redit copy duplicating people in room. (thanks Anderyu)
[May 19 2010] - Rumble
  Gave Arne Troffaes proper credit for fixing Cygwin syslog rotation.
[May 16 2010] - Rumble
  Fixed bash, NO_BASH flag was being ignored. (thanks Anderyu)
[Apr 22 2010] - Rumble
  Fixed osetval not modifying AC on players. (thanks Rudeboyrave)
[Apr 12 2010] - Rumble 
  Fixed gain_exp quest reward that gave gold and not xp. (thanks Vatiken)
Mar 17 2010] - Fizban
  Made non-existant objects in pfiles be skipped instead of crashing the MUD (thanks drefs)
  Fixed plist overflow.
[Mar 11 2010] - Rumble
  Updated do_export_zone to include shop files (thanks Kyle)
[Mar 07 2010] - Rumble
  Updated do_scan. (thanks Zman)
[Feb 13 2010] - Rumble
  Removed delete object option in oedit menu.
[Feb 08 2010] - Rumble
  Added CIRCLE_WINDOWS check for tell m-w usage of getpid(). (thanks Kyle)
  Changed zcheck to ignore object type TRASH when checking for a cost of 0.
  Changed teleport level to LVL_BUILDER.
[Jan 27 2010] - Rumble
  Updated World (thanks Parna) and other text files for release.
[Jan 18 2010] - Fizban
  Edited scuba check so immortals with nohassle on don't need one.
[Jan 18 2010] - Rumble
  Fixed bad AFF_SCUBA check for underwater rooms.
tbaMUD 3.61
[Dec 28 2009] - Rumble