@@ -35,6 +35,9 @@ export (QQ's a zone into a tarball)
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 @
+[Jul 03 2010] - Rumble
+  Fixed oedit to allow setting of UNDEFINED object type. (thanks Tink)
+  Fixed alias bug from using * as first character. (thanks Dio)
 [Jun 20 2010] - Rumble
   Fixed two memory leaks. (thanks Dio)
 [Jum 19 2010] - Fizban
